# appserver

./: .gitignore  AUTHORS  CUSTOMER.sql  CUSTOMER_update_trg.sql  ChangeLog  GetAccount.xml  GetJobs.xml  GetMyJobs.xml  JOB.sql  Makefile.am  SGnurse-icon.xcf  appserver.db  aws-mysql-tunnel.cmd  aws-mysql.cmd  aws-ssh.cmd  aws-tunnel.cmd  client.c  client.h  configure.ac  db_functions.c  db_functions.h  do_appserver.sh  gcm_database.SQL  gcm_users.sql  insert.xml  main.c  main.h  test.xml  test2.xml  test3.xml  testdb-compile.sh  testdb.c  xml_functions.c  xml_functions.h
SGnurse/: import-summary.txt  local.properties
SGnurse/app/: app-release.apk  build.gradle
SGnurse/app/src/main/: AndroidManifest.xml
SGnurse/app/src/main/java/com/alexlee188/sgnurse/: AboutDialog.java  AssignedJobAdapter.java  Config.java  GCMNotificationIntentService.java  GcmBroadcastReceiver.java  JobAdapter.java  MainActivity.java  TCPClient.java  job.java
SGnurse/app/src/main/res/drawable-hdpi/: sgnurse.pg
SGnurse/app/src/main/res/drawable-xxhdpi/: sgnurse.pg
SGnurse/app/src/main/res/layout/: about.xml  assigned_job_row.xml  fragment_account.xml  fragment_list.xml  fragment_main.xml  fragment_user_details.xml  job_row.xml
SGnurse/app/src/main/res/layout-h800dp/: about.xml  fragment_account.xml  fragment_assigned.xml  job_row.xml
SGnurse/app/src/main/res/menu/: main.xml
SGnurse/app/src/main/res/raw/: info.txt  terms.txt
SGnurse/app/src/main/res/values/: strings.xml
SGnurse/gradle/wrapper/: gradle-wrapper.properties
android/: .classpath  .project  AndroidManifest.xml  project.properties
android/res/layout/: activity_main.xml  fragment_list.xml
android/res/menu/: main.xml
android/res/values/: strings.xml
android/src/com/alexlee188/sgnurse/: MainActivity.java  TCPClient.java
gcm_server_php/: GCM.php  config.php  db_functions.php  gcm_msg.php  gcm_msg_all.php  register.php  send_message.php
www/: chgoto.js  chgoto.php  index.html
www/html/: Booking.php  CancellationRefund.html  ContactUs.html  HourlyRates.html  HowItWorks.html  Insurance.html  Mobile.css  NurseRegistration.html  NursingProcedures.html  NursingServices.html  SGprivacypolicy.html  TermsOfService.html  Vision.html  index.html  privacypolicy.html  wakeboard_video.html
